# devkit

./: .gitignore  .pre-commit-config.yaml  .trivyignore  .typos.toml  .vig-os  .vulnixignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTE.md  Containerfile  README.md  SECURITY.md  flake.nix  install.sh  justfile  justfile.gh  justfile.worktree  package-lock.json  package.json  pyproject.toml  renovate.json
.githooks/: commit-msg  pre-commit  prepare-commit-msg
.github/: CODEOWNERS  dependency-review-allow.txt  label-taxonomy.toml
.github/ISSUE_TEMPLATE/: docs.yml
.github/scripts/: select-ghcr-prune-targets.sh  select-rc-draft-releases.sh
.github/workflows/: ci.yml  codeql.yml  ghcr-cleanup.yml  home-matrix.yml  nix-cachix.yml  nix-image.yml  prepare-release-extension.yml  prepare-release.yml  promote-release.yml  release.yml  renovate-changelog-build.yml  renovate-changelog-commit.yml  renovate-changelog.yml  renovate-validate.yml  scorecard.yml  security-scan.yml  sync-issues.yml  sync-main-to-dev.yml  update-nixpkgs-unstable.yml
assets/: init-workspace.sh  parse-github-remote-lib.sh
assets/gitignore.d/: nix.gitignore  node.gitignore  python.gitignore  rust.gitignore
assets/justfile.d/: node.justfile.project
assets/smoke-test/: README.md
assets/workspace/: .gitignore  .pre-commit-config.yaml  .vig-os  CHANGELOG.md  SECURITY.md  justfile  justfile.project  pyproject.toml
assets/workspace/.claude/: agent-models.toml
assets/workspace/.devcontainer/: CHANGELOG.md  devcontainer.json  docker-compose.local.yaml  docker-compose.yml  justfile.devc  justfile.gh  justfile.worktree
assets/workspace/.devcontainer/scripts/: init-precommit.sh  post-attach.sh  post-create.sh  post-start.sh  setup-claude.sh  setup-git-conf.sh  setup-tailscale.sh  verify-auth.sh
assets/workspace/.github/: renovate-default.json
assets/workspace/.github/actions/resolve-image/: action.yml
assets/workspace/.github/actions/resolve-toolchain/: action.yml
assets/workspace/.github/workflows/: ci.yml  codeql.yml  prepare-release.yml  promote-release.yml  release-core.yml  release-extension.yml  release-publish.yml  release.yml  renovate-changelog-build.yml  renovate-changelog.yml  scorecard.yml  sync-issues.yml  sync-main-to-dev.yml
assets/workspace/docs/: DOWNSTREAM_RELEASE.md  container-ci-quirks.md
docs/: COMMIT_MESSAGE_STANDARD.md  CONTAINER_SECURITY.md  CROSS_REPO_RELEASE_GATE.md  DOWNSTREAM_RELEASE.md  MIGRATION.md  NIX.md  RELEASE_CYCLE.md  SKILL_PIPELINE.md  WORKFLOW_SECURITY.md  generate.py
docs/designs/: tailscale-ssh.md
docs/home/: BOOTSTRAP.md  COOKBOOK.md  CREDENTIALS.md  ROLLBACK.md
docs/issues/: issue-1003.md  issue-1008.md  issue-1009.md  issue-1015.md  issue-1016.md  issue-1017.md  issue-1019.md  issue-1020.md  issue-1021.md  issue-1024.md  issue-1025.md  issue-1027.md  issue-1028.md  issue-1029.md  issue-1030.md  issue-1031.md  issue-1034.md  issue-1036.md  issue-1038.md  issue-1039.md  issue-1040.md  issue-1041.md  issue-1044.md  issue-1045.md  issue-1046.md  issue-1047.md  issue-1052.md  issue-1053.md  issue-1054.md  issue-1055.md  issue-1056.md  issue-1057.md  issue-1059.md  issue-1060.md  issue-1061.md  issue-1062.md  issue-1070.md  issue-1071.md  issue-1073.md  issue-1074.md  (+201 more)
nix/: devtools.nix  hooks.nix  pymarkdown.nix
nix/home/: cli.nix  (+7 more)
scripts/: clean.sh  devc-remote.sh  init.sh  manifest.toml  prune-ghcr-tags.sh  requirements.yaml  sync_manifest.py  transforms.py
templates/python/: README.md  pyproject.toml
templates/python/src/example_pkg/: __init__.py
templates/python/tests/: __init__.py  test_example.py
tests/: README.md  conftest.py  docker-compose.test.yml  test_ci_runner.py  test_flake_checks.py  test_flake_devshell.py  test_flake_hooks.py  test_flake_modules.py  test_flake_services.py  test_floating_tags.py  test_image.py  test_install_script.py  test_integration.py  test_promote_mergeability.py  test_release_core_dist_gitignore.py  test_release_core_sync_dispatch.py  test_release_tag_prefix.py  test_resolve_image_manifest.py  test_resolve_image_probe.py  test_scaffold_downstream_release_doc.py  test_scaffold_lint.py  test_setup_toolchain_env.py  test_sync_settings.py  test_transforms.py  test_utils.py  test_workflow_cachix.py  test_workflow_model.py  test_workflow_pr_agent_fingerprints.py  test_workflow_prepare_extension.py  test_workflow_private_repo_guard.py  test_workflow_release_extension.py  test_workflow_sync_checkout.py  test_workflow_zizmor_baseline.py
tests/fixtures/native_ext/: native_ext.c  pyproject.toml  setup.py
(+317 files in other folders)
