[project]
name = "example_pkg"
version = "0.1.0"
description = "Example package — rename example_pkg to your project's package."
requires-python = ">=3.14,<3.15"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/example_pkg"]

[dependency-groups]
dev = ["pytest==9.1.1", "pytest-cov==7.1.0"]
